// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SitewideLinks should render correctly 1`] = `
.emotion-0 {
  background-color: #222222;
  font-size: 0.875rem;
  line-height: 1rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
}

@media (max-width:25rem) {
  .emotion-0 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) {
  .emotion-0 {
    padding: 0 1rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-0 {
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    font-size: 0.8125rem;
  }
}

.emotion-2 {
  max-width: 80rem;
  margin: 0 auto;
}

.emotion-4 {
  border-bottom: 0.0625rem solid #3F3F42;
  list-style-type: none;
  margin: 0;
  padding: 0.5rem 0;
  -webkit-column-count: 4;
  column-count: 4;
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-4 {
    display: grid;
    grid-auto-flow: column;
  }
}

@media (max-width:14.9375rem) {
  .emotion-4 {
    grid-auto-flow: row;
    -webkit-column-count: 1;
    column-count: 1;
  }
}

@media (min-width:15rem) and (max-width:37.4375rem) {
  .emotion-4 {
    grid-column-gap: 0.5rem;
    grid-template-columns: repeat(2,1fr);
    grid-template-rows: repeat( 4,auto );
    -webkit-column-count: 2;
    column-count: 2;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-4 {
    grid-column-gap: 1rem;
    grid-template-columns: repeat(3,1fr);
    grid-template-rows: repeat( 3,auto );
    -webkit-column-count: 3;
    column-count: 3;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-4 {
    grid-column-gap: 1rem;
    grid-template-columns: repeat(4,1fr);
    grid-template-rows: repeat( 2,auto );
    -webkit-column-count: 4;
    column-count: 4;
  }
}

@media (min-width:80rem) {
  .emotion-4 {
    grid-column-gap: 1rem;
    grid-template-columns: repeat(5,1fr);
    grid-template-rows: repeat( 2,auto );
    -webkit-column-count: 5;
    column-count: 5;
  }
}

.emotion-6 {
  min-width: 50%;
  -webkit-column-gap: 1rem;
  column-gap: 1rem;
  -webkit-break-inside: avoid-column;
  break-inside: avoid-column;
}

.emotion-8 {
  padding: 0.5rem 0 0.5rem;
  color: #FFFFFF;
  font-weight: 700;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: block;
}

.emotion-9:hover .emotion-10,
.emotion-9:focus .emotion-10 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-54 {
  color: #FFFFFF;
  margin: 0;
  padding: 1rem 0;
}

.emotion-56 {
  padding: 0.5rem 0 0.5rem;
  color: #FFFFFF;
  font-weight: 700;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <ul
        class="emotion-4 emotion-5"
        role="list"
      >
        <li
          class="emotion-6 emotion-7"
          role="listitem"
        >
          <a
            class="emotion-8 emotion-9"
            href="https://www.bbc.co.uk/news"
          >
            <span
              class="emotion-10 emotion-11"
            >
              Link0
            </span>
          </a>
        </li>
        <li
          class="emotion-6 emotion-7"
          role="listitem"
        >
          <a
            class="emotion-8 emotion-9"
            href="https://www.bbc.co.uk/news"
          >
            <span
              class="emotion-10 emotion-11"
            >
              Link1
            </span>
          </a>
        </li>
        <li
          class="emotion-6 emotion-7"
          role="listitem"
        >
          <a
            class="emotion-8 emotion-9"
            href="https://www.bbc.co.uk/news"
          >
            <span
              class="emotion-10 emotion-11"
            >
              Link2
            </span>
          </a>
        </li>
        <li
          class="emotion-6 emotion-7"
          role="listitem"
        >
          <a
            class="emotion-8 emotion-9"
            href="https://www.bbc.co.uk/news"
          >
            <span
              class="emotion-10 emotion-11"
            >
              Link3
            </span>
          </a>
        </li>
        <li
          class="emotion-6 emotion-7"
          role="listitem"
        >
          <a
            class="emotion-8 emotion-9"
            href="https://www.bbc.co.uk/news"
          >
            <span
              class="emotion-10 emotion-11"
            >
              Link4
            </span>
          </a>
        </li>
        <li
          class="emotion-6 emotion-7"
          role="listitem"
        >
          <a
            class="emotion-8 emotion-9"
            href="https://www.bbc.co.uk/news"
          >
            <span
              class="emotion-10 emotion-11"
            >
              Link5
            </span>
          </a>
        </li>
        <li
          class="emotion-6 emotion-7"
          role="listitem"
        >
          <a
            class="emotion-8 emotion-9"
            href="https://www.bbc.co.uk/news"
          >
            <span
              class="emotion-10 emotion-11"
            >
              Link6
            </span>
          </a>
        </li>
        <li
          class="emotion-6 emotion-7"
          role="listitem"
        >
          <a
            class="emotion-8 emotion-9"
            href="https://www.bbc.com/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/"
            lang="en-GB"
          >
            <span
              class="emotion-10 emotion-11"
            >
              AdChoices / Do Not Sell My Info
            </span>
          </a>
        </li>
      </ul>
      <p
        class="emotion-54 emotion-55"
      >
        <span>
          Text here.
        </span>
         
        <a
          class="emotion-56 emotion-9"
          href="https://www.bbc.co.uk/news"
        >
          <span
            class="emotion-10 emotion-11"
          >
            Link
          </span>
        </a>
      </p>
    </div>
  </div>
</div>
`;

exports[`SitewideLinks should render correctly with trust project link 1`] = `
.emotion-0 {
  background-color: #222222;
  font-size: 0.875rem;
  line-height: 1rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
}

@media (max-width:25rem) {
  .emotion-0 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) {
  .emotion-0 {
    padding: 0 1rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-0 {
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    font-size: 0.8125rem;
  }
}

.emotion-2 {
  max-width: 80rem;
  margin: 0 auto;
  padding-top: 0.5rem);
}

.emotion-4 {
  border-bottom: 0.0625rem solid #3F3F42;
  list-style-type: none;
  margin: 0;
  padding: 0 0 0.5rem;
  -webkit-column-count: 4;
  column-count: 4;
}

@supports (grid-template-columns:fit-content(200px)) {
  .emotion-4 {
    display: grid;
    grid-auto-flow: column;
  }
}

@media (max-width:14.9375rem) {
  .emotion-4 {
    grid-auto-flow: row;
    -webkit-column-count: 1;
    column-count: 1;
  }
}

@media (min-width:15rem) and (max-width:37.4375rem) {
  .emotion-4 {
    grid-column-gap: 0.5rem;
    grid-template-columns: repeat(2,1fr);
    grid-template-rows: repeat( 5,auto );
    -webkit-column-count: 2;
    column-count: 2;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-4 {
    grid-column-gap: 1rem;
    grid-template-columns: repeat(3,1fr);
    grid-template-rows: repeat( 4,auto );
    -webkit-column-count: 3;
    column-count: 3;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-4 {
    grid-column-gap: 1rem;
    grid-template-columns: repeat(4,1fr);
    grid-template-rows: repeat( 3,auto );
    -webkit-column-count: 4;
    column-count: 4;
  }
}

@media (min-width:80rem) {
  .emotion-4 {
    grid-column-gap: 1rem;
    grid-template-columns: repeat(5,1fr);
    grid-template-rows: repeat( 3,auto );
    -webkit-column-count: 5;
    column-count: 5;
  }
}

.emotion-4>li:first-of-type {
  border-bottom: 0.0625rem solid #3F3F42;
  padding: 0.5rem 0;
  margin-bottom: 0.5rem;
  grid-column: 1/-1;
  width: 100%;
  -webkit-column-span: all;
  column-span: all;
}

.emotion-6 {
  min-width: 50%;
  -webkit-column-gap: 1rem;
  column-gap: 1rem;
  -webkit-break-inside: avoid-column;
  break-inside: avoid-column;
}

.emotion-8 {
  padding: 0.5rem 0 0.5rem;
  color: #FFFFFF;
  font-weight: 700;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: block;
}

.emotion-9:hover .emotion-10,
.emotion-9:focus .emotion-10 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-60 {
  color: #FFFFFF;
  margin: 0;
  padding: 1rem 0;
}

.emotion-62 {
  padding: 0.5rem 0 0.5rem;
  color: #FFFFFF;
  font-weight: 700;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <ul
        class="emotion-4 emotion-5"
        role="list"
      >
        <li
          class="emotion-6 emotion-7"
          role="listitem"
        >
          <a
            class="emotion-8 emotion-9"
            href="http://www.bbc.com/terms"
          >
            <span
              class="emotion-10 emotion-11"
            >
              Why you can trust the bbc
            </span>
          </a>
        </li>
        <li
          class="emotion-6 emotion-7"
          role="listitem"
        >
          <a
            class="emotion-8 emotion-9"
            href="https://www.bbc.co.uk/news"
          >
            <span
              class="emotion-10 emotion-11"
            >
              Link0
            </span>
          </a>
        </li>
        <li
          class="emotion-6 emotion-7"
          role="listitem"
        >
          <a
            class="emotion-8 emotion-9"
            href="https://www.bbc.co.uk/news"
          >
            <span
              class="emotion-10 emotion-11"
            >
              Link1
            </span>
          </a>
        </li>
        <li
          class="emotion-6 emotion-7"
          role="listitem"
        >
          <a
            class="emotion-8 emotion-9"
            href="https://www.bbc.co.uk/news"
          >
            <span
              class="emotion-10 emotion-11"
            >
              Link2
            </span>
          </a>
        </li>
        <li
          class="emotion-6 emotion-7"
          role="listitem"
        >
          <a
            class="emotion-8 emotion-9"
            href="https://www.bbc.co.uk/news"
          >
            <span
              class="emotion-10 emotion-11"
            >
              Link3
            </span>
          </a>
        </li>
        <li
          class="emotion-6 emotion-7"
          role="listitem"
        >
          <a
            class="emotion-8 emotion-9"
            href="https://www.bbc.co.uk/news"
          >
            <span
              class="emotion-10 emotion-11"
            >
              Link4
            </span>
          </a>
        </li>
        <li
          class="emotion-6 emotion-7"
          role="listitem"
        >
          <a
            class="emotion-8 emotion-9"
            href="https://www.bbc.co.uk/news"
          >
            <span
              class="emotion-10 emotion-11"
            >
              Link5
            </span>
          </a>
        </li>
        <li
          class="emotion-6 emotion-7"
          role="listitem"
        >
          <a
            class="emotion-8 emotion-9"
            href="https://www.bbc.co.uk/news"
          >
            <span
              class="emotion-10 emotion-11"
            >
              Link6
            </span>
          </a>
        </li>
        <li
          class="emotion-6 emotion-7"
          role="listitem"
        >
          <a
            class="emotion-8 emotion-9"
            href="https://www.bbc.com/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/"
            lang="en-GB"
          >
            <span
              class="emotion-10 emotion-11"
            >
              AdChoices / Do Not Sell My Info
            </span>
          </a>
        </li>
      </ul>
      <p
        class="emotion-60 emotion-61"
      >
        <span>
          Text here.
        </span>
         
        <a
          class="emotion-62 emotion-9"
          href="https://www.bbc.co.uk/news"
        >
          <span
            class="emotion-10 emotion-11"
          >
            Link
          </span>
        </a>
      </p>
    </div>
  </div>
</div>
`;
